2011-06-29 Roman
- !!!!:SYS: OpenSCADA thread's object is made hard linked to thread. Task create and destroy detect method is made to task wrapper.
    No more need self starting detect method for each task.
    A thread load and call statistic is added to task manager.
    The function TSYS::time2str is some improved for times less for seconds.
- FIX:Transport.SSL, Transport.Sockets: Child task naming and processing is some fixed.
- DAQ: Copy source parameter type is added on copy.
- DAQ.ModBus: Logical type of parameters copy support is added. Default try for serial devices is set to 1.


2011-06-24 Roman
- DAQ.*: Call now status is added to all DAQ-modules.
- DAQ, DAQ.JavaLikeCalc: Calc time limit for compile function set is added to TTipDAQ::compileFunc().
    Calc limit property is added to DAQ parameter's template object.


2011-06-23 Roman
- SYS, UI.QTStarter, UI.QTCfg, UI.Vision: Use pkg-config for QT4 build configuration determine.
- SYS.Function: Split resources of execute and manage connection to function.
- DAQ.JavaLikeCalc: Calc functions limit is make more usable on long time subcalls.


2011-06-22 Roman
- SYS: The function SYS.sleep() is added to user API. Repeated send signal SIGALRM is added in function taskDestroy().
- DAQ: Object type selection is added to templates.


2011-06-20 Roman
- SYS.XML, UI.VCAEngine: Special blocks is moved to special child tag whith name "<?nm".
- FIX:DAQ.BlockCalc: Global link status check is fixed.
- DAQ.ModBus: Tip help is added to links of "Template configuration" page.
- FIX:Archive.FSArch: Remove order to greater integer begin time for getVals() and used order to smaller.
    Value archive file truncation is fixed for often boolean warnings.


2011-06-17 Maxim
- FIX:UI.Vision: The drawing performance of the fills with the fill images is optimized for the primitive ElFigure by changing the "contains"
                 more quick mechanism especially for the complex objects.


2011-06-17 Roman